@@ -84,6 +84,14 @@
                 <version>5.0.0</version>
                 <scope>test</scope>
             </dependency>
+
+            <!-- Mockito Inline for static methods -->
+            <dependency>
+                <groupId>org.mockito</groupId>
+                <artifactId>mockito-inline</artifactId>
+                <version>5.0.0</version>
+                <scope>test</scope>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 
@@ -97,10 +105,19 @@
                 <executions>
                     <!-- Prepare agent across all modules -->
                     <execution>
+                        <id>jacoco-prepare-agent</id>
+                        <phase>process-test-classes</phase>
                         <goals>
                             <goal>prepare-agent</goal>
                         </goals>
                     </execution>
+                    <execution>
+                            <id>jacoco-report</id>
+                            <phase>verify</phase>
+                            <goals>
+                                <goal>report</goal>
+                            </goals>
+                        </execution>
                 </executions>
             </plugin>
             <!-- Compiler plugin -->
@@ -108,6 +125,11 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.11.0</version>
+                <configuration>
+                    <!-- 
+                        <argLine>dash dash enable-preview</argLine>
+                    -->
+                </configuration>
             </plugin>
 
             <!-- Surefire plugin -->
@@ -115,6 +137,14 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>3.1.2</version>
+                <configuration>
+                    <argLine>-javaagent:${settings.localRepository}/org/jacoco/org.jacoco.agent/0.8.10/org.jacoco.agent-0.8.10-runtime.jar=destfile=${project.build.directory}/jacoco.exec,append=true</argLine>
+                    <!-- Ensure JavaFX internal modules are accessible -->
+                    <argLine>${argLine} --add-opens javafx.graphics/com.sun.javafx.application=ALL-UNNAMED 
+                            --add-opens javafx.controls/com.sun.javafx.scene.control=ALL-UNNAMED 
+                            --add-opens javafx.graphics/com.sun.javafx.stage=ALL-UNNAMED
+                            --add-opens javafx.base/com.sun.javafx.collections=ALL-UNNAMED</argLine>
+                </configuration>
             </plugin>
 
             <!-- SpotBugs Plugin -->
